--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,34 @@
 # Node modules
 node_modules/
 
-# Build directories
+# Next.js build output
 .next/
-dist/
 
-# Environment variables
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# macOS system files
+# Mac system files
 .DS_Store
+
+# Vercel files
+.vercel/
+
+# IDE/editor configurations (optional, depending on your editor)
+.vscode/
+.idea/
+
+# Test directories (optional, if you have testing setups)
+coverage/
+
+# Build directories (if any other build system is used)
+dist/
+build/
